--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ beautifulsoup4==4.11.2
 crispy-bootstrap5==0.7
 deprecation==2.1.0
 Django==4.1.6
+django-author==1.2.0
 django-bootstrap-v5==1.0.11
 django-crispy-forms==1.14.0
 django-decouple==2.1
@@ -12,6 +13,7 @@ packaging==23.0
 Pillow==9.4.0
 psycopg2==2.9.5
 PyJWT==2.6.0
+setuptools-git==1.2
 six==1.16.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.3
