--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,22 @@
+arrow==1.2.1
 asgiref==3.6.0
 beautifulsoup4==4.11.2
+blinker==1.4
+CacheControl==0.12.10
+cachy==0.3.0
+certifi==2020.6.20
+cffi==1.15.1
+chardet==4.0.0
+charset-normalizer==3.0.1
+cleo==0.8.1
+clikit==0.6.2
+ConfigArgParse==1.5.3
+crashtest==0.3.1
 crispy-bootstrap5==0.7
+cryptography==3.4.8
 deprecation==2.1.0
+distlib==0.3.4
+distro==1.7.0
 Django==4.1.6
 django-author==1.2.0
 django-bootstrap-v5==1.0.11
@@ -9,12 +24,63 @@ django-crispy-forms==1.14.0
 django-decouple==2.1
 django-recaptcha==3.0.0
 django-tinymce==3.5.0
-packaging==23.0
+filelock==3.6.0
+Genshi==0.7.6
+html5lib==1.1
+httplib2==0.20.2
+icalendar==4.0.3
+idna==2.10
+importlib-metadata==4.6.4
+jeepney==0.7.1
+keyring==21.8.0
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lockfile==0.12.2
+lxml==4.9.2
+Markdown==3.3.6
+more-itertools==8.10.0
+msgpack==1.0.3
+numpy==1.24.1
+oauthlib==3.2.0
+packaging==20.9
+pandas==1.5.2
+pastel==0.2.1
+pexpect==4.8.0
 Pillow==9.4.0
+pkginfo==1.8.2
+platformdirs==2.5.1
+poetry==1.1.12
+poetry-core==1.0.7
+prompt-toolkit==3.0.28
 psycopg2==2.9.5
+ptyprocess==0.7.0
+pycparser==2.21
+Pygments==2.11.2
 PyJWT==2.6.0
+pylev==1.2.0
+pynvim==0.4.2
+pyparsing==2.4.7
+python-dateutil==2.8.2
+python-magic==0.4.24
+pytz==2022.7.1
+pywin32-ctypes==0.2.0
+relatorio==0.10.0
+requests==2.25.1
+requests-toolbelt==0.9.1
+SecretStorage==3.3.1
 setuptools-git==1.2
+shellingham==1.4.0
 six==1.16.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.3
+tomlkit==0.9.2
 tzdata==2022.7
+urllib3==1.26.5
+urwid==2.1.2
+virtualenv==20.20.0
+wadllib==1.3.6
+watchdog==2.1.6
+wcwidth==0.2.5
+webencodings==0.5.1
+zipp==1.0.0
